--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body{
     font-family: 'Montserrat', sans-serif;
     /* padding: 1em; */
-    background-color: #000;
+    background-color: #181719;
     color: #fff;
     font-size: 10px;
 }
@@ -64,4 +64,39 @@ img{
     margin: 1.2em 0em;
     line-height: 1.7rem;
     width: 60%;
+}
+
+.info__link{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+    line-height: 1.7rem;
+}
+
+.info__img{
+    margin: 2em 0em;
+    margin-bottom: 4em;
+}
+
+.img__info{
+    position: relative;
+}
+
+
+.card__img{
+    border-radius: 50%;
+    width: 50px;
+}
+
+.card{
+    background-color: #181719;
+    position: absolute;
+    width: 300px;
+    padding: 1em;
+    top: 562px;
+    left: 52px;
+    z-index: 1;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
