--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ img{
 
 .container{
     padding: 1em;
+    padding-bottom: 10em;
 }
 
 .info{
@@ -76,7 +77,6 @@ img{
 }
 
 .info__img{
-    /* max-width: 450px; */
     margin: 2em 0em;
     margin-bottom: 4em;
 }
@@ -86,6 +86,23 @@ img{
     width: 95%;
 }
 
+.img__section{
+    display: inline-block;
+    position: relative;
+}
+
+.card__title{
+    position: absolute;
+    top: 12px;
+    left: 70px;
+}
+
+.card__subtitle{
+    position: absolute;
+    top: 30px;
+    left: 70px;
+    color: #828282;
+}
 
 .card__img{
     border-radius: 50%;
@@ -95,10 +112,10 @@ img{
 .card{
     background-color: #181719;
     position: absolute;
-    width: 250px;
+    width: 260px;
     padding: 1em;
-    top: 562px;
-    left: 52px;
+    top: 560px;
+    left: 45px;
     z-index: 1;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
