--- a/styles.css
+++ b/styles.css
@@ -46,12 +46,12 @@ header{
 }
 
 .hamburger{
+    position: relative;
     display: block;
     width: 30px;
     height: 4px;
     border-radius: 2px;
     background-color: #ffffff;
-    position: relative;
 }
 
 .hamburger::before,
@@ -74,8 +74,17 @@ header{
 }
 
 .nav{
-    display: none;
+    background-color: #ffffff;
+    color: #000000;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    transform: translateX(100%);
 }
+
 
 img{
     width: 100%;
