--- a/styles.css
+++ b/styles.css
@@ -74,17 +74,38 @@ header{
 }
 
 .nav{
-    background-color: #ffffff;
-    color: #000000;
+    background-color: #000000;
+    color: #ffffff;
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 2;
-    transform: translateX(100%);
+    transform: translateX(0%);
 }
 
+.nav__list{
+    position: absolute;
+    top: 150px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    font-size: 1.8rem;
+}
+
+.nav__item{
+    list-style: none;
+    padding: 1em;
+}
+
+.nav__link{
+    color: #ffffff;
+    text-decoration: none;
+}
 
 img{
     width: 100%;
